--- a/gregsond/index.html
+++ b/gregsond/index.html
@@ -7,7 +7,7 @@
       <title>Student Name | Portfolio</title>
    </head>
    <body>
-      <!-- Main Content Area  -->
+      <!-- Module 1.1 Blog Post Starts here -->
       <main>
          <!-- Page Header  -->
          <header>
@@ -116,6 +116,110 @@ In an era of cloud computing, artificial intelligence, and global digital infras
          <footer class="page-footer">
             <p>Senge, P. M. (2006). The fifth discipline: The art and practice of the learning organization (Rev. ed.). Doubleday.</p>
          </footer>
+         <!-- Module 1.2 Blog Post Starts here -->
+      <main>
+         <!-- Page Header  -->
+         <header>
+            <h1>Why Life-Cycle Thinking Is the Foundation of Sustainable Digital Systems</h1>
+            </header>
+         <p class="blurb-text">Modern digital systems do not simply appear fully formed. They are conceived, designed, built, deployed, maintained, and eventually retired through a structured and deliberate process. Whether the system is a cloud platform, a hospital information system, a fintech application, or a national infrastructure network, its success depends not only on its technical design but also on how well its entire life span is planned and managed. This is where the Systems Development Life Cycle (SDLC) becomes essential.
+The SDLC provides a framework for understanding how complex digital systems are created and sustained over time. It offers structure, accountability, risk control, and traceability. These qualities that are indispensable in an era of rapid technological change, cybersecurity threats, regulatory compliance, and evolving user expectations.
+This blog post defines the Systems Development Life Cycle in practical terms, examines the characteristics, strengths, and weaknesses of linear, iterative, and incremental life cycle models, and reflects on why life-cycle thinking is critical for building resilient, sustainable, and adaptable digital systems. Drawing on modern systems engineering principles and model-based practices, it demonstrates that successful digital environments are not products. They are living systems that must be engineered with longevity and evolution in mind.</p>
+            <header>
+               <h2>Defining the Systems Development Life Cycle</h2>
+            </header>
+            <p class="blurb-text">At its core, the Systems Development Life Cycle is a structured process for planning, building, deploying, operating, and retiring a system. It provides a disciplined approach for transforming an idea or business need into a fully operational system while ensuring quality, reliability, security, and long-term sustainability.
+In practical terms, the SDLC can be understood as the end-to-end journey of a system, beginning with problem identification and ending with system retirement. While implementations vary by organization and industry, most SDLC frameworks include the following phases: concept and requirements definition, system design and architecture, development and implementation, verification and validation, deployment and operations, maintenance, and evolution, and finally retirement and disposal.
+Holt (2023) emphasizes that modern systems engineering treats the life cycle not as a linear checklist but as an integrated and model-driven ecosystem of activities. In model-based systems engineering (MBSE), the life cycle is represented through interconnected system models that track requirements, architecture, behavior, interfaces, risks, and validation throughout the system’s existence.
+In this sense, the SDLC is not just a project methodology. It is a governance framework for managing complexity, uncertainty, and change.</p>
+            <header>
+               <h3>Life Cycle Models: Different Ways to Navigate System Complexity</h3>
+            </header>
+            <p class="blurb-text">While the SDLC defines what stages a system goes through, life cycle models define how those stages are executed. Different models reflect different assumptions about risk, uncertainty, regulatory constraints, user involvement, and technical volatility. Three of the most widely used life cycle approaches are linear (Waterfall) models, iterative models, and incremental models. Each model embodies a different philosophy of system development.</p>
+            <header>
+               <h4>Linear Life Cycle Model - Waterfall</h4>
+            </header>
+            <p class="blurb-text">The linear life cycle model (or commonly known as the Waterfall model) follows a sequential progression of phases. Each phase must be completed before the next begins, and feedback loops are minimal. Once a phase is approved, the project moves forward with limited opportunity for revision.
+The linear model offers several clear benefits. Because each phase is clearly defined, schedules and budgets are easier to estimate and manage. Extensive documentation supports traceability, compliance, and auditing, which is especially important in regulated industries. Responsibilities and deliveries are well defined at every stage, and when requirements are stable and well understood, the linear model can be efficient and dependable.
+In aerospace, defense, healthcare, and government systems, the Waterfall model remains widely used because of its emphasis on formal verification, safety, and regulatory compliance (INCOSE, 2015).
+Despite its structure, the linear model has significant limitations. It is inflexible, making late-stage changes costly and disruptive. Stakeholders may not see a working system until late in development, and errors introduced early may only be detected during testing. In fast-moving digital ecosystems, where user needs and technologies evolve rapidly, the rigidity of linear development often leads to misalignment between the delivered system and real-world needs.</p>
+            <header>
+               <h5>Iterative Life Cycle Model</h5>
+            </header>
+            <p class="blurb-text">The iterative model breaks development into repeated cycles, or iterations. Each iteration produces a working version of the system, which is evaluated and refined in subsequent cycles. Rather than finalizing all requirements up front, the system evolves through continuous learning and improvement.
+The iterative model offers several strategic benefits. Stakeholders can interact with working versions of the system early, high-risk components can be addressed sooner, and users often refine their needs after seeing real prototypes. The system evolves in response to operational feedback, improving alignment with real-world use.
+Pressman and Maxim (2020) describe iterative development as particularly well suited for complex software systems, where requirements are difficult to fully specify in advance.
+However, iteration introduces its own challenges. Continuous refinement can lead to uncontrolled expansion of features, tracking evolving requirements and versions requires strong governance, and poor early architectural decisions can become entrenched over time. Budget predictability can also suffer if projects lack clear stopping criteria. Iteration works best when supported by strong systems architecture, configuration management, and life-cycle governance.</p>
+            <header>
+               <h6>Incremental Life Cycle Model</h6>
+            </header>
+            <p class="blurb-text">The incremental model delivers the system in a series of functional increments. Each increment adds new capabilities to an existing operational baseline. Instead of building the entire system at once, the system grows in controlled stages.
+Incremental development offers important strengths. Users gain access to useful features early, investment is distributed across increments, and regular deliveries demonstrate progress to stakeholders. Enhancements can be planned into future increments, making change easier to manage.
+This approach is widely used in large enterprise platforms, SaaS products, and government modernization programs.
+Incremental models are not without risks. Each new increment must integrate cleanly with existing components, short-term decisions may compromise long-term scalability, and poorly coordinated increments can result in a fragmented user experience. Dependency management also becomes increasingly complex as the system grows.
+Holt (2023) stresses that robust system models must support incremental delivery to ensure architectural integrity across releases.</p>
+            <header>
+               <h7>Why Lifecycle Thinking Matters in Digital Systems</h7>
+            </header>
+            <p class="blurb-text">Modern digital systems are not static artifacts. They are dynamic, interconnected ecosystems that must operate reliably under constant change. Thinking in terms of a systems life cycle is therefore not optional, it is foundational.</p>
+            <header>
+               <h8>Designing for Longevity, Not Just Deployment</h8>
+            </header>
+            <p class="blurb-text">Many systems failures stem from a narrow focus on initial deployment rather than long-term operation. Lifecycle thinking forces engineers to consider scalability, maintainability, security updates, regulatory evolution, data growth, and infrastructure obsolescence. A system that cannot evolve will eventually fail, regardless of how well it performs on day one. Holt (2023) highlights that sustainable systems are engineered from the outset with upgrade paths, modular architecture, and model-based traceability that supports continuous evolution.</p>
+            <header>
+               <h9>Managing Complexity Through Systems Engineering</h9>
+            </header>
+            <p class="blurb-text">Digital systems today are deeply interconnected. Cloud platforms integrate with IoT devices, AI systems depend on massive data pipelines, and healthcare platforms integrate with insurance, laboratories, and government databases. Lifecycle thinking provides the structure needed to manage this complexity across time. It enables engineers to understand how changes ripple through interfaces, dependencies, and operational workflows. INCOSE (2015) emphasizes that life-cycle engineering is essential for ensuring that system requirements remain aligned with stakeholder needs across decades of operation.</p>
+            <header>
+               <h10>Supporting Sustainability and Environmental Responsibility</h10>
+            </header>
+            <p class="blurb-text">Sustainability is no longer optional. Data centers consume massive amounts of energy, hardware manufacturing has environmental costs, and software inefficiencies translate directly into carbon emissions. Lifecycle thinking enables energy-efficient architecture, hardware reuse strategies, responsible decommissioning, cloud optimization, and green computing practices. A system designed without regard for its environmental footprint is no longer considered responsible engineering.</p>
+            <header>
+               <h11>Enabling Continuous Innovation</h11>
+            </header>
+            <p class="blurb-text">Innovation does not happen at deployment, it happens throughout the life of a system. Digital platforms must integrate modern technologies, respond to competitive pressure, adapt to regulatory changes, and address emerging security threats. Iterative and incremental life-cycle models support continuous innovation while preserving architectural stability. This balance between agility and governance is the hallmark of mature digital organizations.</p>
+            <header>
+               <h12>Aligning Technology with Human Systems</h12>
+            </header>
+            <p class="blurb-text">Every digital system exists within a broader human system: users, organizations, regulators, and society. Lifecycle thinking ensures that user experience evolves with expectations, training adapts to workforce changes, governance aligns with ethical standards, and accessibility improves over time. Systems engineering is about designing socio-technical systems, not just software.</p>
+            <header>
+               <h13>The SDLC as a Strategic Asset</h13>
+            </header>
+            <p class="blurb-text">Organizations that treat the SDLC as a strategic capability consistently outperform those that treat it as a technical formality. A mature life-cycle framework enables faster digital transformation, lower operational risk, stronger compliance posture, improved cybersecurity resilience, higher system reliability, and greater stakeholder trust. In regulated environments such as healthcare, finance, defense, and public infrastructure, life-cycle discipline is often a legal requirement. In commercial environments, it is a competitive advantage.</p>
+            <header>
+               <h14>Conclusion - Systems Are Living Entities</h14>
+            </header>
+            <p class="blurb-text">The Systems Development Life Cycle is not a procedural formality. SDLC is the foundation of responsible digital engineering. Whether implemented through linear, iterative, or incremental models, the SDLC provides the structure needed to transform ideas into resilient, evolving systems. Linear models offer predictability and compliance. Iterative models enable learning and adaptation. Incremental models deliver value while managing risk. Each model reflects a different strategy for navigating uncertainty and complexity.
+Most importantly, life cycle thinking reframes how we see technology. Digital systems are not products to be delivered and forgotten. They are living entities that must grow, adapt, and endure. In an era where digital infrastructure underpins healthcare, finance, transportation, governance, and global communication, systems engineering is no longer just a technical discipline is a societal responsibility.</p>
+         <nav>
+            <ul>
+               <li><a href="portfolio-example">portfolio page</a></li>
+               <li><a href="blog">blog mockup</a></li>
+               <li><a href="https://www.figma.com/board/9O9GxUn1zssEC25hVGr5J8/Context-Aware-Digital-System-Diagrams-Example?t=R1pFQAYnH5G3FXbU-1">digital system diagrams (figjam)</a></li>
+               <li><a href="https://www.figma.com/design/2BwDcynwbs79827NjnzvUs/Web-App-Style-Guide-Example?t=q0TmcZZ5F1NbNbi0-1">web app style guide</a></li>      
+               <li><a href="https://www.figma.com/proto/A69nzVmUdqziMZTiDT2NUt/User-Journey-Prototype?node-id=0-1&t=R1pFQAYnH5G3FXbU-1">user journey prototype(figma)</a></li>
+               <li><a href="website-mockup">website mockup</a></li>
+            </ul>
+         </nav>
+        <!-- Page Footer -->
+         <footer class="page-footer">
+            <p>Holt, J. (2023). Systems engineering demystified: Apply modern, model-based systems engineering techniques to build complex systems (2nd ed.). Packt Publishing.</p>
+         </footer>
+         <footer class="page-footer">
+            <p>International Council on Systems Engineering (INCOSE). (2015). Systems engineering handbook: A guide for system life cycle processes and activities (4th ed.). Wiley.</p>
+         </footer>
+         <footer class="page-footer">
+            <p>Pressman, R. S., & Maxim, B. R. (2020). Software engineering: A practitioners approach (9th ed.). McGraw-Hill Education.</p>
+         </footer>
+         <!-- Module 2.1 Blog Post Starts here -->
+
+         <!-- Module 2.2 Blog Post Starts here -->
+
+         <!-- Module 2.3 Blog Post Starts here -->
+
+         <!-- Module 3.1 Blog Post Starts here -->
+
+         <!-- Module 3.2 Blog Post Starts here -->
       </main>
    </body>
 </html>
