--- a/rogersj/index.html
+++ b/rogersj/index.html
@@ -156,6 +156,20 @@ In the end, life cycle thinking changes the mindset entirely. It pulls focus awa
       </li>
     </ol>
   </footer>
+<footer class="article-footer">
+    <h3>Sources</h3>
+    <ol>
+      <li>
+        Holt, J. (2019). <em>Systems engineering demystified</em>. Packt Publishing.
+      </li>
+      <li>
+        International Council on Systems Engineering. (2015). <em>Systems engineering handbook: A guide for system life cycle processes and activities</em> (4th ed.). Wiley.
+      </li>
+      <li>
+        National Institute of Standards and Technology. (2020). <em>Systems engineering fundamentals</em>. https://www.nist.gov
+      </li>
+    </ol>
+  </footer>
 
 
          </article>
