--- a/fry-duec/index.html
+++ b/fry-duec/index.html
@@ -63,7 +63,60 @@
          </article>
 
          <!-- Module 1.2 Blog Post Starts here -->
-
+         <article>
+            <header class="article-header">
+               <h2>Module 1.2 Blog Post</h2>
+            </header>
+            <h3>
+               What Is the System Development Life Cycle?
+            </h3>
+               <p>The system development Life Cycle, or SDLC, is a design framework used for developing systems. It serves not only as a set of guidelines for system development but also as a method of thought when designing a system. It guides the developmental process through conceiving, designing, building, deploying, and ultimately retiring an information system or software application (Holt, 2021, p. 136). At its heart, SDLC is a development map that breaks down clearly the many steps and stages that goes into system development. </p>
+               <p>While there is variation between specific individual models, SDLC generally encompasses the entire life cycle of a system from birth to death. Using SDLC as a methodology shifts from viewing a system or product as a static entity to a dynamic entity with a lifespan that will grow and adapt.</p>
+               <p>Defining a system’s life cycle is critical not only for development, but also for economic purposes such as designing proposals for procurement. This is called Procurement Life Cycle, or PLC. In cases where a developer is buying a subsystem from a buyer, such as a plan manufacturer buying the wheels from a bidder, a PLC defines this interaction within its framework (Holt, 2021, p. 138). SDLC is an important documentation when it comes to defining a system for potential buyers.</p>            
+            <h3>
+               The Linear Model
+            </h3>
+               <p>The Linear Model, or the Waterfall Model, is as the name describes: a linear model that focuses on a phase approach to designing a system (GeeksforGeeks, 2018). Each phase is completed one by one, in a sequential fashion with little room for backtracking or change when a phase is complete (GeeksforGeeks, 2018). Each phase has strong requirements that require it to be finished completely and documented extensively before moving on to the next phase. There is strong emphasis on planning ahead and being upfront about any requirements. The model assumes a high degree of stability when designing, so any requirements need to be outlined early on before any progress is made (GeeksforGeeks, 2018). Progress flows, like a waterfall, with minimal room for change.</p>
+               <p>The simplistic nature of the linear model is its best strength but also can be its biggest downfall. Systems that need to adapt constantly to dynamic environments are not well suited to the linear model. On the other hand, a system that exists within a stable environment with well outlined requirements and specifications will thrive when developed with the linear model.</p>
+            <h3>
+               The Iterative Model
+            </h3>
+               <p>The Iterative Model is a model of SDLC that focuses on building complexity on an initial simplified design (AirBrake, 2016). Instead of a singular pass through the standard life cycle stages like the linear model, a system designed with the linear model will go through several (Holt, 2021, p. 146). After the initial planning phase, a select few phases will be repeated until the final iteration. Once a cycle is completed then the current iteration will be thoroughly evaluated. This evaluation includes examining an iteration’s current effectiveness and complexity after which it will be decided if another iteration will be created or not.</p>
+               <p>There are many advantages to which the iterative model has. For digital systems, most already use a form of the iterative model with versioning updates (AirBrake, 2016). The iterative model makes this form of updating easier because it is designed around a form of this occurrence. The iterative model also makes turnaround for the planning phase to the working system faster. Unlike the linear model which has very extensive phases, each stage in the iterative model is comparatively much faster and therefore it is quicker at producing a working design. Another advantage of the iterative model is its adaptability; dynamic conditions can be modified to suit ever-changing requirements. New iterations can be created in a shorter timeframe than other models allow and can also be reverted back to an older functional version if required (AirBrake, 2016).</p>
+               <p>For all the advantages that the iterative model has, it is not a perfect design model for every system. In fact, there are many disadvantages to using the iterative model instead of a different SDLC model. The iterative model in particular struggles with late-stage issues as a result of minimal planning compared to other models. A system designed with the iterative model might need several iterations to solve an issue that a more substantial planning phase might have avoided. Another issue that the iterative model struggles with is feature creep. As successive iterations pile up, the late-stage designs become far out of the scope of what was initially planned.</p>
+            <h3>
+               The Incremental Model
+            </h3>
+               <p>The Incremental Model is a model that focuses on designing a system in small parts that build upon each other (Holt, 2021, p. 148). The incremental model and the iterative model are similar in approach in that they both focus on building upon a functional version until a system design is finalized (Holt, 2021, p. 148). Each increment phase adds extended functionality to a system that builds as more incremental progress is made. The incremental model can be compared to making a house room by room, where each room is complete. </p>
+               <p>The incremental model works well for systems that can deliver some functionality before the final version is finished (Holt, 2021, p. 149). A system can be released in an incomplete, but functional state, to consumers faster. This provides tangible value to a system faster than other models allow, bringing in more cash for system development. The incremental model also allows for reduction in scope; if a system’s development is canceled then it still has value as a functioning product.</p>
+               <p>Despite the advantages that the incremental model brings, it also has its drawbacks. The incremental model requires more upfront planning and work before other models. Poor foresight will lead to headaches when adding new increments and the system will feel unharmonious. Increments must also be implemented carefully as to not break the functionality of previous progress. </p>
+            <h3>
+               The importance of Life Cycle Thinking
+            </h3>
+               <p>Life Cycle Thinking, or LCT, is an essential methodology for building a successful system. It is useful not only as a framework for building a successful system but also as a crucial mindset for the future of design, sustainability and evolution of digital systems.</p>
+            <ul style="list-style-type:none;">
+  <li><strong>Design</strong></li>
+  <li>Life cycle thinking forces designers to consider their product at each stage of its life, beyond its immediate functionality. How a system will be maintained, how it will scale and how it will keep relevancy. Creating with a system’s entire life cycle makes designers make higher quality products that account for the inconvenient questions like disposal and repair with as much care as functionality. Designing a product is not only for its useable life but also for its eventual irrelevancy.</li>
+  <li><strong>Sustainability</strong></li>
+  <li>Sustainability is often a forgotten quality when it comes to designing a system. Sustainability in LCT encompasses a wide variety of topics. From system longevity to energy efficiency, and to product end of life. LCT focuses on responsible system retirement whether it pertains to responsible hardware disposal, or to data archival.</li>
+  <li><strong>Evolution of Digital Systems</strong></li>
+  <li>Using SDLC as framework for development forces designers to confront the full commitment that comes with system development. It mandates designers look at the full picture, encouraging more long-term commitments over short-term ones. By utilizing LCT, designers of digital systems can avoid late term issues by planning ahead for the system’s entire life cycle. This ensures more reliable outcomes and that systems created are better suited by the models they are created with.</li>
+</ul>  
+         <h3>Conclusion</h3>
+         <p>The Systems Development Life Cycle, provides an essential framework for creating systems that ensure better outcomes in development and beyond. The choice between which model to employ for development comes down to the specific needs of that system and the contextual environment in which it is being used in. Modern product development requires the strategic use of Life Cycle Thinking to reach the full potential of what a product can achieve. By adopting LCT, designers and organizations can ensure that systems are not only built for its launch but also for longevity and evolution. Ensuring digital systems can deliver sustained value and adapt to a changing world.</p>
+               <footer class="article-footer">
+                <h3>Sources:</h3>
+<ol>
+                     <li>AirBrake. (2016, December 15). <em>Iterative Model: What Is It And When Should You Use It?</em>. Airbrake Docs.<a href=" https://docs.airbrake.io/blog/sdlc/iterative-model/"> https://docs.airbrake.io/blog/sdlc/iterative-model/</a></li>
+                     </ol>
+ <ol>
+                     <li>Holt, J. (2021). <em>Systems Engineering Demystifying : a practitioner’s handbook for developing complex systems using a model-based approach.</em> Birmingham ; Mumbai Packt.</li>
+                     </ol>
+                     <ol>
+                     <li>GeeksforGeeks. (2018, March 18).<em>Waterfall Model Software Engineering.</em>GeeksforGeeks.<a href=" https://www.geeksforgeeks.org/software-engineering/waterfall-model/"> https://www.geeksforgeeks.org/software-engineering/waterfall-model/</a></li>
+                     </ol>      
+            </footer>
+         </article>
          <!-- Module 2.1 Blog Post Starts here -->
 
          <!-- Module 2.2 Blog Post Starts here -->
