--- a/jonesa/index.html
+++ b/jonesa/index.html
@@ -38,7 +38,7 @@
             </footer>
          </article>
 
-         <!-- Module 1.2 Blog Post Starts here -->
+         <!-- Module 1.2 Blog Post Starts here test -->
 
          <!-- Module 2.1 Blog Post Starts here -->
 
