--- a/casasr/index.html
+++ b/casasr/index.html
@@ -122,7 +122,7 @@ International Council on Systems Engineering. (2022). <em>INCOSE vision 2035</em
 
     <p>A responsible systems engineer asks not just if a model delivers the project, but if it treats people justly. A rigid linear approach in a high-uncertainty project is arguably unethical. It forces a team to follow a plan everyone knows is flawed. A good engineer balances stakeholder needs with the mental and emotional well-being of the team (Ramos, Ferreira, & Barceló, 2011).</p>
 
-    <h2>The Broader Lesson for Future Engineers</h2>
+    <h2>The Broader Lesson for Future Engineers.</h2>
 
     <p>No life cycle model is universally best. Each fits different human and project needs. The wisest engineers match their model to the realities and values of the people involved. Projects are as much about human hopes and fears as technical challenges. Success is not just about meeting requirements. It’s about whether the team survives and thrives.</p>
 
