Added Module 2.1 Blogpost

--- a/brodaj/index.html
+++ b/brodaj/index.html
@@ -287,7 +287,129 @@
          </footer>
       </article>
       <!-- Module 2.1 Blog Post Starts here -->
-
+      <article>
+         <header class="article-header">
+            <h2>Module 1.2 Blog Post</h2>
+         </header>
+         <p>Human-Centered Design (HCD) is the philosophy of designing around ourselves. On the surface, that sounds
+            like it should be an easy task: who would know us better than us? In practice, reality is rarely that ideal.
+            HCD is often one of the most difficult parts of a system, physical or digital, to get right. Humans are
+            complex, unpredictable, and fickle beings.</p>
+         <p>We aren't without a guiding star, however. Two major trains of thought have risen to try to make sense of
+            our madness: ISO 9241-210 and the IDEO Field Guide. ISO defines HCD as an approach that makes systems usable
+            by focusing on the users, their needs, and requirements. It's a systematic process. You understand the
+            context, specify the requirements, build a solution, and evaluate it against those requirements. It is
+            logical and rigid, but perhaps a bit too idealized and removed from reality for the type of systems we use
+            every day. In contrast, IDEO treats HCD more like art and culture. It is an ethnographic approach, studying
+            how real humans adapt real systems to get real things done.</p>
+         <p>Both perspectives agree on one thing: you can't design a system in a vacuum. You have to start with the
+            fundamentals of the human brain.</p>
+         <p></p>Take something as simple as a digital checkbox. In a modern UI, it might just be two thin lines forming
+         a
+         square and a check (☑). Yet, the reason we instinctively know that clicking the box selects an item isn't
+         because we were born with that knowledge. Our hunter-gatherer forefathers had no use for written ballots
+         when gathering berries. It's because the design is a skeuomorph of a physical ballot. We are leveraging an
+         existing mental model, a concept Jakob's Law tells us is vital because users spend most of their time using
+         other products (Yablonski, 2024). They expect your system to follow the "laws of physics" they've already
+         learned elsewhere.</p>
+         <p>This reliance on the familiar is a result of how our perception is biased by past experience. As Jeff
+            Johnson (2020) explains, our brains are not neutral recorders of information: they are constantly filtering
+            the present through the lens of what we have seen before. When we see that square box, our perceptual
+            priming kicks in, allowing us to identify its function instantly without conscious thought (Johnson, 2020).
+         </p>
+         <p>When we ignore these established ideas in favor of being innovative or different, we aren't just changing a
+            coat of paint; we are breaking the fundamental mental maps we've built up over the years. By breaking from
+            established visual structures, we force the brain to spend precious cycles trying to figure out how to use
+            the tool rather than actually using it to achieve a goal.</p>
+         <h3>Visual Noise</h3>
+         <p>In the early days of consumer electronics, designers were terrified that users wouldn't know how to interact
+            with a glass screen. To fix this, they leaned heavily into skeuomorphism, or making digital elements look
+            like their physical counterparts (Fabunan, 2025). The notes app was a yellow legal pad with a torn paper
+            texture at the top. The calendar app was bound by leather. The compass had a brushed-metal finish and glass
+            reflections. </p>
+         <p>At first, this was a brilliant application of Jakob's Law. By making a digital button look exactly like a
+            user's light switch, the learning curve was steeply reduced by leveraging the user's existing mental models.
+            However, as technology matured and people became more comfortable with their glowing glass and aluminum
+            rectangles, we hit a point of diminishing returns. The design shifted from being a helpful shorthand to
+            visual noise.</p>
+         <p>This is mental bloat. When you shoehorn woodgrain textures and linen patterns into an interface, you are
+            adding non-functional data that the human brain still has to process. This is where we run into Hick's Law.
+            The time it takes to make a decision increases with the complexity of the decision (Yablonski, 2024). When a
+            user's eyes have to navigate through deviated leather stitching in their phonebook just to find the "Add
+            Contact" button, you are slowing them down.</p>
+         <p>This also gets in the way of Miller's Law. Our working memory is a finite resource (Yablonski, 2024). In a
+            clean system, these slots in our memory are used for navigation and our perceived outcome of the action. In
+            a heavily skeumorphic system, some of that mental real estate is wasted on processing decorative textures.
+            And when a user eventually becomes desensitized to the bells and whistles, the man-hours it took to craft
+            the wooden bookshelf for the ebook app and the digital cows taken from us to wrap our calendar app in
+            digital leather go to waste.</p>
+         <p>Jeff Johnson (2020) points out that our vision is optimized to see structure. When an interface is busy,
+            the visual hierarchy collapses. The brain struggles to distinguish the foreground (the button you need to
+            press) from the background (the textures and window chrome). We were so focused on making the digital world
+            a facsimile of real life that we forgot that the digital world was supposed to let us escape from the
+            inefficiencies of reality.</p>
+         <h3>An Overcorrection</h3>
+         <p>The industry's response to the clutter of the late 2000s and early 2010s was known as flat design. If
+            skeumorphism was a cluttered garage, flat design was an empty white room. Many people wave the whole
+            movement away as cheap mediocrity, but I disagree. Good flat design, like iOS 7 or early iterations of
+            Google's Material Design, didn't actually get rid of skeuomorphs. It distilled them into their most basic
+            elements. It removed the superfluous veneer of woodgrain and cloth that cluttered their predecessors, but
+            kept the functional skeuomorphs, like subtle shadows to show depth, motion to show what an action did, and
+            simple but recognizable icons that reference the same existing mental models that the more elaborate
+            classical skeuomorphic designs were built around.</p>
+         <p>This was originally a victory for cognitive efficiency. By stripping away the leather stitching, designers
+            intended to satisfy Hick's Law by making the content the sole focus. However, we've recently witnessed this
+            trend spiral into what I can only define as a Catastrophe of Contrast. Take Google's Material 3, for
+            example. In an attempt to be ultra-modern, it has strayed too far from its initial intention of "digital
+            paper." They've created a visual hierarchy nightmare by basing their entire UI on tinted off-white
+            backgrounds and dynamic color palettes that bleed into the interface elements. It's got the eye candy, but
+            none of the home-grown charm of classical skeuomorphism. It's the worst of both worlds.</p>
+         <p>When everything is a soft pastel shade and borders are removed to look cleaner, the interface no longer
+            provides the pops of contrast our peripheral vision needs to guide our central vision toward the next action
+            (Johnson, 2020). This creates what Kate Moran (2015) calls "click uncertainty," where weak visual signifiers
+            condition users to hover tentatively across a page rather than navigating with confidence. Instead of the
+            interface providing clear signifiers, the user is forced to rely on pure memorization. This is a failure of
+            human-centered design because our vision is biologically optimized to see edges and contrast, not subtle
+            shade variations (Johnson, 2020).</p>
+         <p>This creates a massive conflict with Fitts's Law. While the law is mathematically about the size and
+            distance of a target (Yablonski, 2024), it assumes the user can actually identify where that target is. In
+            this contrast catastrophe, buttons become indistinguishable from the background, and the physical structure
+            of the interface turns into a blur of nearly identical hues. By prioritizing a clean aesthetic over the way
+            human vision actually works, these modern design systems not only fail basic human-centered design, they're
+            repeating the clutter and noise we've been trying to move away from.</p>
+         <h3>The Middle Ground</h3>
+         <p>The history of UI and UX design has shown that designers tend to prefer the extremes, whether it's wood
+            details or a complete lack of detail. Both extremes fail because they prioritize an aesthetic trend over the
+            person behind the glass. True human-centered design lives in the middle ground with distilled skeuomorphs to
+            provide structure without the noise.</p>
+         <p>This balance is where the two primary frameworks of HCD finally meet. The ISO 9241-210 standard demands a
+            system that is effective and efficient. By removing the digital woodgrain, we satisfy this by reducing the
+            cognitive load and decision time defined by Hick's Law and Miller's Law. However, a system that is purely
+            efficient but visually invisible fails the test of satisfaction. This is where the IDEO Field Guide
+            perspective is vital. It reminds us that design requires empathy for the human experience. We keep the
+            subtle shadow under a button or the check in a checkbox because it respects the user's existing mental
+            models. It is an acknowledgment that our brains are still tied to the physical world (Johnson, 2020).</p>
+         <p>Proper human-focused design is understanding that design is a tool to contextualize ourselves before letting
+            it melt away and accomplish a task. It is the art of balancing the familiarity of the physical world with
+            the efficiency of the digital one, and when either one of those goes out of balance, the whole system fails.
+         </p>
+         <footer class="article-footer">
+            <h3>Sources:</h3>
+            <ol>
+               <li>Fabunan, A. (2025, March 26). <em>Skeuomorphism in UX: Definitions, examples, and its relevance
+                     today</em>. LogRocket Blog. <a
+                     href="https://blog.logrocket.com/ux-design/skeuomorphism-ux-design-examples/">https://blog.logrocket.com/ux-design/skeuomorphism-ux-design-examples/</a>
+               </li>
+               <li>Johnson, J. (2020). <em>Designing with the Mind in Mind: simple guide to understanding user
+                     interface design guidelines</em>. Morgan Kaufmann Publisher.</li>
+               <li>Moran, K. (2015, November 8). <em>Long-Term Exposure to Flat Design: How the Trend Slowly Makes Users
+                     Less Efficient</em>. Nielsen Norman Group. <a
+                     href="https://www.nngroup.com/articles/flat-design-long-exposure/">https://www.nngroup.com/</a>
+               </li>
+               <li>Yablonski, J. (2024). <em>Laws of UX</em>. O'Reilly Media, Inc.</li>
+            </ol>
+         </footer>
+      </article>
       <!-- Module 2.2 Blog Post Starts here -->
 
       <!-- Module 2.3 Blog Post Starts here -->
