--- a/fayyaza/index.html
+++ b/fayyaza/index.html
@@ -372,7 +372,25 @@
         philosophy that, when practiced with discipline and genuine curiosity, produces work that lasts.
     </p>
        <footer class="article-footer">
-                
+                <h3>References</h3>
+    <p>
+        IDEO. (2015). <em>The field guide to human-centered design</em> (1st ed.). IDEO.org.
+    </p>
+
+    <p>
+        Nielsen, J. (2000). Jakob's law. Nielsen Norman Group.
+        https://www.nngroup.com/articles/jakobs-law-compat/
+    </p>
+
+    <p>
+        Wickens, C. D., Hollands, J. G., Banbury, S., & Parasuraman, R. (2004).
+        <em>Attentional resources</em> (2nd ed.). Routledge.
+    </p>
+
+    <p>
+        Wickens, C. D., Hollands, J. G., Banbury, S., & Parasuraman, R. (2004).
+        <em>Engineering psychology and human performance</em> (5th ed.). Routledge.
+    </p>
                 
             </footer>
 
