--- a/dyakanoffb/index.html
+++ b/dyakanoffb/index.html
@@ -86,7 +86,7 @@
                     <li>Yablonski, J. (2024). <em>Laws of UX</em>.  O'Reilly Media from <a href="https://cwu.vitalsource.com/books/9781098146924">https://cwu.vitalsource.com/books/9781098146924</a></li>
                     <li>Landry, L. (2020, December 15). <em>What is human-centered design?</em>. Harvard from  <a href="https://online.hbs.edu/blog/post/what-is-human-centered-design‌">https://online.hbs.edu/blog/post/what-is-human-centered-design</a></li>
                     <li>IxDF (2016, August 31). <em>What is Visual Hierarchy?</em>. Interaction Design Foundation from <a href="https://www.interaction-design.org/literature/topics/visual-hierarchy">https://www.interaction-design.org/literature/topics/visual-hierarchy</a></li>
-                    <li>IDEO. (2025). <em>Field Guide to Human-Centered Design</em>. IDEO from <a href="https://www.ideo.com/">https://www.ideo.co/
+                    <li>IDEO. (2025). <em>Field Guide to Human-Centered Design</em>. IDEO from <a href="https://www.ideo.com/">https://www.ideo.com/
                     </a></li>
                     </ol>
             </footer>
