Module 2.1 Blog Post
Added the Module 2.1 Blog Post: Designing for the Human Element

--- a/garciaj/index.html
+++ b/garciaj/index.html
@@ -136,6 +136,69 @@
 </article>
 
          <!-- Module 2.1 Blog Post Starts here -->
+          <article>
+    <header>
+        <h1>Designing for the Human Element</h1>
+        <p>
+            Jose Garcia Jr<br>
+            Central Washington University<br>
+            IT312: Designing the Digital Environment<br>
+            Mr. John Durham<br>
+            February 3, 2026
+        </p>
+    </header>
+
+    <section>
+        <h2>Designing for the Human Element</h2>
+        <p>Designers who focus on human needs develop functional tools for the digital world, but other designers produce interfaces which users find easy to use. <strong>Human-Centered Design (HCD)</strong> philosophy shifts its focus from technical requirements to study how users experience products in their everyday activities. Designing for people requires architects to function as psychological architects who create spaces which honor the built-in human restrictions that affect how we perceive and focus and store information. Designers who merge empathy with cognitive science methods will develop interfaces which extend human behavior in a natural way.</p>
+    </section>
+
+    <section>
+        <h2>Foundations of Human-Centered Design</h2>
+        <p>Human-Centered Design serves as a design method which surpasses UI rules because designers need to develop empathetic abilities. As noted in the <em>Field Guide to Human-Centered Design</em>, HCD is "the backbone of our work" because it ensures that the solutions created are desired by the people they are meant to serve (<a href="https://www.designkit.org/resources/1" target="_blank">IDEO.org, 2015</a>, p. 9). Designers need to experience the user environment to discover hidden requirements through this design method.</p>
+        
+        <p>The human-first approach receives direction from two main frameworks which serve as its foundation:</p>
+        <ul>
+            <li>The international standard <strong>ISO 9241-210</strong> provides a technical framework which directs organizations to use an iterative process consisting of observation, requirement-setting, and evaluation (<a href="https://www.iso.org/standard/77520.html" target="_blank">ISO, 2019</a>).</li>
+            <li><strong>IDEO's Field Guide</strong> offers a social perspective focused on the mindsets of design, emphasizing three phases: Inspiration, Ideation, and Implementation.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Perception and the Power of Visual Hierarchy</h2>
+        <p>Designers must understand how humans organize visual information to guide their attention effectively. Without a clear <strong>visual hierarchy</strong>, users experience cognitive overload. Visual hierarchy uses size, color, and contrast to signal importance.</p>
+        <p>According to <a href="https://www.justinmind.com/ui-design/visual-hierarchy" target="_blank">Justinmind (n.d.)</a>, designers use scanning patterns like the <strong>F-Pattern</strong> or <strong>Z-Pattern</strong> to place critical information where the eye naturally lands. By utilizing high color contrast on primary buttons, designers exploit biological shortcuts, allowing the human eye to find important elements without having to "hunt" for them.</p>
+    </section>
+
+    <section>
+        <h2>Universal Laws of the User Experience</h2>
+        <p>To ensure consistency, designers utilize established UX laws that reflect human cognitive behavior, as detailed in the <a href="https://lawsofux.com/" target="_blank">Laws of UX</a>:</p>
+        
+        <ul>
+            <li><strong>Jakob's Law</strong> suggests that users spend the vast majority of their time on other websites and apps. Consequently, they prefer your site to work exactly like the ones they already know (Yablonski, n.d.). When a designer uses a magnifying glass icon for "Search," they are practicing empathy by not forcing the user to learn a new visual language.</li>
+            <li><strong>Fitts's Law</strong> states that the time required to move to a target depends on the distance to that target and the size of the target. In modern UI design, this means making primary action buttons large and placing them in easily accessible regions, such as the bottom of a mobile screen where a user's thumb naturally rests (Yablonski, n.d.).</li>
+            <li><strong>Hick's Law</strong> dictates that the time it takes to make a decision increases with the number and complexity of choices. In a human-centered approach, designers avoid "overwhelming" the user. Instead of presenting twenty options simultaneously, they might use "progressive disclosure"—showing only the most necessary information first—to keep the user’s cognitive load manageable.</li>
+            <li><strong>Miller's Law</strong> asserts that the average person can only keep roughly seven (plus or minus two) items in their working memory. Designers use chunking as their method to achieve this goal by breaking down information into smaller sections. The user experience becomes better when registration forms extend across multiple sections because these sections divide the process into smaller steps which help users achieve a sense of accomplishment instead of feeling fatigued (Yablonski, n.d.).</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Conclusion</h2>
+        <p>Ultimately, designing for people means acknowledging that we will not get it right on the first try. The IDEO framework supports the concept that "iteration is the best way to get it right" because designers can improve their products through direct human feedback according to IDEO.org (2015, p. 21). The combination of ISO 9241-210 standards with UX laws psychological knowledge enables us to develop digital environments which both look great and show proper respect for their human users.</p>
+    </section>
+
+    <hr>
+
+    <footer>
+        <h3>References</h3>
+        <ul style="list-style-type: none; padding-left: 0;">
+            <li>IDEO.org. (2015). <em>The field guide to human-centered design</em> (1st ed.). https://www.designkit.org/resources/1</li>
+            <li>International Organization for Standardization. (2019). <em>Ergonomics of human-system interaction — Part 210: Human-centred design for interactive systems</em> (ISO Standard No. 9241-210). https://www.iso.org/standard/77520.html</li>
+            <li>Justinmind. (n.d.). <em>Visual hierarchy: Everything you need to know</em>. https://www.justinmind.com/ui-design/visual-hierarchy</li>
+            <li>Yablonski, J. (n.d.). <em>Laws of UX</em>. https://lawsofux.com/</li>
+        </ul>
+    </footer>
+</article>
 
          <!-- Module 2.2 Blog Post Starts here -->
 
