--- a/garciaj/index.html
+++ b/garciaj/index.html
@@ -154,7 +154,7 @@
     </section>
 
     <section>
-        <h2>Foundations of Human-Centered Design</h2>
+        <h2>Foundation of Human-Centered Design</h2>
         <p>Human-Centered Design serves as a design method which surpasses UI rules because designers need to develop empathetic abilities. As noted in the <em>Field Guide to Human-Centered Design</em>, HCD is "the backbone of our work" because it ensures that the solutions created are desired by the people they are meant to serve (<a href="https://www.designkit.org/resources/1" target="_blank">IDEO.org, 2015</a>, p. 9). Designers need to experience the user environment to discover hidden requirements through this design method.</p>
         
         <p>The human-first approach receives direction from two main frameworks which serve as its foundation:</p>
