--- a/mcialwainc/index.html
+++ b/mcialwainc/index.html
@@ -103,7 +103,63 @@
          </body>
          
          
-         <!-- Module 2.1 Blog Post Starts here -->
+         <head>
+            <title>Why Understanding Human Behavior Is the Foundation of Meaningful UX</title>
+         </head>
+         <body>
+
+         <main>
+            <Section>
+            <h2>Human-Centered Design: Designing Around Human Needs</h2>
+            <p>Human-centered design (HCD) is an approach that prioritizes users’ needs, limitations, and contexts throughout the entire design process. Rather than asking what technology can do, HCD asks what people need and how systems can support those needs. According to ISO 9241-210, human-centered design aims to “improve human-system interaction by making systems usable and useful” while accounting for user characteristics, tasks, and environments (International Organization for Standardization [ISO], 2019).</p>
+            <p>At its core, HCD acknowledges that humans are not perfectly rational or consistent. People are influenced by habits, expectations, emotions, and cognitive limitations. Designing for people means recognizing these realities and shaping systems that accommodate them. This is especially important in digital systems where small design choices such as button placement or menu complexity, can significantly impact usability.</p>
+            <p>IDEO’s Human-Centered Design Field Guide expands this idea by framing design as an empathetic, iterative process rooted in real human experiences (IDEO, 2015). Rather than relying solely on assumptions or abstract requirements, IDEO emphasizes observing users in context, listening to their stories, and co-creating solutions. Together, ISO 9241-210 and IDEO offer complementary perspectives on designing for people: one grounded in standards and structure, the other rooted in creativity and empathy.</p>
+            </Section>
+
+            <section>
+               <h2>ISO 9241-210 vs. IDEO’s Field Guide: Structure vs. Empathy</h2>
+               <p>While both ISO 9241-210 and IDEO’s Field Guide advocate for human-centered design, they approach it from different angles. ISO 9241-210 provides a formal, systematic framework that emphasizes usability, user involvement, and iterative evaluation throughout the system life cycle (ISO, 2019). It is particularly valuable in regulated or complex environments—such as healthcare, finance, or government—where consistency, documentation, and measurable outcomes are essential.</p>
+               <p>ISO 9241-210 defines six key principles, including understanding users and contexts, involving users throughout design, and refining solutions through evaluation. These principles reinforce the idea that designing for people is not a one time activity but an ongoing process that evolves as user needs change.</p>
+               <p>IDEO’s Field Guide, by contrast, adopts a more flexible and exploratory approach. It emphasizes empathy as the foundation of design, encouraging designers to immerse themselves in users’ lived experiences (IDEO, 2015). Rather than starting with requirements, IDEO begins with questions, observations, and experimentation. This approach is especially effective when addressing ambiguous or socially complex problems where user needs are not immediately obvious.</p>
+               <p>In practice, these two perspectives are not oppositional but complementary. ISO provides the rigor needed to ensure usability and accessibility, while IDEO provides the mindset needed to uncover deeper human insights. Designing for people requires both structure and empathy standards to guide decision-making and human understanding to give those decisions meaning.</p>
+            </section>
+            <section>
+               <h2>Perception, Attention, and Visual Hierarchy in Usability</h2>
+               <p>Understanding perception and attention is essential to designing usable systems. Humans do not process all visual information equally; instead, they rely on visual hierarchy to determine what matters most. Elements such as size, contrast, spacing, and color guide users’ attention and influence how information is interpreted.</p>
+               <p>or example, in a mobile banking app, the “Check Balance” or “Withdraw Cash” buttons should be visually dominant, while secondary options are less emphasized. If all elements compete equally for attention, users may feel overwhelmed or confused. Effective visual hierarchy reduces cognitive effort and helps users complete tasks efficiently (Yablonski, 2020).</p>
+               <p>Perception also affects how users interpret affordances—signals that indicate how an element should be used. Buttons that look clickable, links that resemble links, and forms that follow familiar patterns help users rely on learned behaviors rather than guesswork. When designers ignore perceptual principles, users must stop and think, increasing frustration and error rates.</p>
+               <p>These concepts are reinforced by Jakob’s Law, which states that users prefer systems that work similarly to ones they already know (Yablonski, 2020). When visual hierarchy aligns with common conventions, users can transfer prior knowledge, making interactions feel intuitive rather than forced.</p>
+            </section>
+            <section>
+               <h2>Applying the Four UX Laws to Designing for People</h2>
+               <p>Jakob’s Law emphasizes familiarity. Users bring expectations shaped by past experiences, and violating those expectations increases cognitive load (Yablonski, 2020). For instance, placing navigation menus in unconventional locations may seem innovative, but it can frustrate users who expect standard layouts.</p>
+               <p>Fitts’s Law focuses on motor behavior and attention, stating that the time required to reach a target depends on its size and distance (Yablonski, 2020). Designing large, easily accessible buttons—especially for frequent actions supports faster, more accurate interactions. This is particularly important for accessibility, as small or tightly spaced targets can disadvantage users with motor impairments.</p>
+               <p>Hick’s Law addresses decision-making, noting that the time it takes to choose increases with the number of options (Yablonski, 2020). Designers can apply this law by simplifying menus, grouping related choices, and prioritizing the most important actions. This is why onboarding screens often limit choices to prevent user overload.</p>
+               <p>Miller’s Law highlights the limits of human memory, suggesting that people can hold only a limited number of items in working memory at once (Yablonski, 2020). Designers can reduce memory strain by chunking information, using progressive disclosure, and relying on recognition rather than recall.</p>
+               <p>Together, these laws reinforce the idea that designing for people means designing with human limitations in mind, not against them.</p>
+            </section>
+            <section>
+            <h2>Empathy as a Design Skill</h2>
+            <p>Beyond cognition and perception, empathy plays a critical role in human-centered design. Empathy allows designers to consider emotional responses, cultural differences, and accessibility needs. IDEO emphasizes empathy as a way to uncover latent needs/problems users may not articulate directly but experience daily (IDEO, 2015).</p>
+            <p>For example, designing for older adults may require larger text, higher contrast, and simplified navigation, not because users lack intelligence, but because perception and motor abilities change over time. Empathy-driven design recognizes these changes as normal human variation rather than deficiencies.</p>
+            <p>ISO 9241-210 also supports empathetic design by requiring designers to account for diverse user characteristics and contexts (ISO, 2019). This reinforces inclusivity and ensures that systems serve a broad range of users rather than a narrow “average.”</p>
+            </section>
+            <section>
+               <h2>Conclusion: Designing With, Not Just For, People</h2>
+               <p>Designing for people means more than making interfaces usable, it means respecting how humans perceive, think, and feel. Human-centered design provides a framework for aligning systems with real human behavior, ensuring that technology supports rather than challenges users. ISO 9241-210 offers the structure needed to embed usability throughout a system’s life cycle, while IDEO’s Field Guide emphasizes empathy and creativity as drivers of meaningful innovation.
+</p>
+               <p>By applying principles of perception, visual hierarchy, and the four UX laws, designers can reduce cognitive load, improve usability, and create experiences that feel intuitive and humane. Ultimately, designing for people is about humility accepting that technology must adapt to humans, not the other way around. When designers prioritize empathy, attention, and perception, they create systems that are not only functional, but genuinely empowering.</p>
+            </section>
+
+         </main>
+
+         <footer>
+            <p>DEO. (2015). The field guide to human-centered design. IDEO.org.</p>
+            <p>International Organization for Standardization. (2019). ISO 9241-210: Ergonomics of human-system interaction—Part 210: Human-centered design for interactive systems. ISO.</p>
+            <p>Yablonski, J. (2020). Laws of UX: Using psychology to design better products and services. O’Reilly Media.</p>
+            <p>ielsen Norman Group. (2020). Visual hierarchy. Nielsen Norman Group.</p>
+         </footer>
+         </body>
 
          <!-- Module 2.2 Blog Post Starts here -->
 
